<resources>
    <string name="app_name">Sample Constraint Layout</string>
    <string name="tEmail">Email</string>
    <string name="tPassword">Password</string>
    <string name="bsignin">Sign-In</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="Idaftar">Daftar</string>
    <string name="enama">Masukkan Nama</string>
    <string name="edalamat">Masukkan Alamat</string>
    <string name="eemail">Masukkan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepass">Masukkan Password Kembali</string>
</resources>